--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,55 @@
-/__pycache__
-/.vscode
+# ==========================
+# Python
+# ==========================
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.env
+.env/
+venv/
+venv.bak/
+*.sqlite3
+*.log
 /bin
+
+# ==========================
+# Node.js / JavaScript
+# ==========================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
+build/
+.env
+
+# ==========================
+# IDEs and Editors
+# ==========================
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# ==========================
+# OS-specific files
+# ==========================
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# ==========================
+# Miscellaneous
+# ==========================
+*.bak
+*.tmp
+*.swp
+
+# PyInstaller
+/dist/
+/build/
+/__pycache__/
+/*.spec
+*.log
+*.pyc
